--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,7 @@
 @import "bootstrap/scss/bootstrap";
 
 .rainbow-border {
-  border: 10px solid transparent;
+  border: 1vw solid transparent;
   border-image: linear-gradient(
     to bottom right,
     #9400D3 0%,
