--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,39 +19,8 @@
   border-image-slice: 1;
 }
 
-@mixin arc($color, $number) {
-  background-color: $color;
-  height: calc(100px - #{$number}*10px);
-  width: calc(200px - #{$number}*20px);
-  @if $number > 0 {
-    top: 10px;
-    left: 10px;
-  }
-  border-radius: 100px 100px 0 0;
-  position: relative;
-}
-
-#rainbow {
-  background-color: transparent;
-  display: flex;
-  width: 100%;
-  height: 100px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  $arcs: (
-    0: #9400D3,
-    1: #4B0082,
-    2: #0000FF,
-    3: #00FF00,
-    4: #FFFF00,
-    5: #FF7F00,
-    6: #FF0000,
-    7: $dark
-  );
-
-  @each $number, $color in $arcs {
-    .arc#{$number} { @include arc($color, $number); }
-  }
+#rainbow img {
+  height: 100%;
+  width: auto;
+  image-rendering: pixelated;
 }
