--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,6 +19,16 @@
   border-image-slice: 1;
 }
 
+#rainbow {
+  background-color: transparent;
+  display: flex;
+  width: 100%;
+  height: 100px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #rainbow img {
   height: 100%;
   width: auto;
